#9 Refactor modal Add flight

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -34,54 +34,64 @@
                                 <p>Add flight information</p>
                             </div>
                             <hr>
-                            <form action="#" method="POST">
-                                <input type="hidden" name="id" value="">
+                            <form th:action="@{/createFlight}" th:object="${flightDto}" method="POST">
+
                                 <div class="form-group">
                                     <div class=" form-group">
                                         <label>Airline :</label>
                                         <select name="airline" id="select-airline">
-                                            <option value="" selected></option>
-                                            <option value="">hida hida</option>
+                                            <option value="-1" selected></option>
+                                            <option th:each="airline : ${airlines}"
+                                                    th:value="${airline.id}"
+                                                    th:text="${airline.airlineName} + ' (' + ${airline.airlineCode} + ')' + ' - ' + ${airline.airlineCountry}">
+                                                Option
+                                            </option>
                                         </select>
                                     </div>
                                     <div class=" form-group">
                                         <label>Departure Airport :</label>
                                         <select name="departure-airport" id="select-airport">
-                                            <option value="" selected></option>
-                                            <option value="">bla bla</option>
+                                            <option value="-1" selected></option>
+                                            <option th:each="departureAirport : ${departureAirports}"
+                                                    th:value="${departureAirport.id}"
+                                                    th:text="${departureAirport.airportName} + ' (' + ${departureAirport.airportCode} + ')' + ' - ' + ${departureAirport.airportCountry}">
+                                                Option
+                                            </option>
                                         </select>
                                     </div>
                                     <div class=" form-group">
                                         <label>Arrival Airport :</label>
                                         <select name="arrival-airport" id="select-airport">
-                                            <option value="" selected></option>
-                                            <option value="">hida hida</option>
+                                            <option value="-1" selected></option>
+                                            <option th:each="arrivalAirport : ${arrivalAirports}"
+                                                    th:value="${arrivalAirport.id}"
+                                                    th:text="${arrivalAirport.airportName} + ' (' + ${arrivalAirport.airportCode} + ')' + ' - ' + ${arrivalAirport.airportCountry}">
+                                                Option
+                                            </option>
                                         </select>
                                     </div>
                                     <div class="form-group">
                                         <label>Departure - date/time</label>
                                         <div class="form-group form-control inline bg-transparent">
-                                            <input id="date-form-width" type="date"
-                                                   name="departure-date"
-                                                   value="">
-                                            <input id="date-form-width" type="time"
-                                                   name="departure-time">
+                                            <input id="date-form-width" type="text"
+                                                   th:text="${departureDate}"
+                                                   th:value="*{departureDate}"
+                                                   name="arrival-date">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label>Arrival - date/time</label>
                                         <div class="form-group form-control inline bg-transparent">
-                                            <input id="date-form-width" type="date"
-                                                   name="arrival-date"
-                                                   value="">
-                                            <input id="date-form-width" type="time"
-                                                   name="arrival-time">
+                                            <input id="date-form-width" type="text" th:text="${arrivalDate}"
+                                                   th:value="*{arrivalDate}"
+                                                   name="arrival-date">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label>Flight number</label>
                                         <input type="text" class="form-control" name="flight-number"
-                                               value="">
+                                               th:text="*{flightNumber}"
+                                               th:value="*{flightNumber}"required>
                                     </div>
                                     <hr>
                                     <div class="form-group">
@@ -146,7 +156,7 @@
                                     <div class="d-flex justify-content-left">
                                         <a th:href="@{/edit/{id}(id=${flight.id})}"
                                            class="btn btn-outline-light btn-xs"
-                                          style="padding: 5px; margin: 2px" title="Edit" data-bs-toggle="modal"
+                                           style="padding: 5px; margin: 2px" title="Edit" data-bs-toggle="modal"
                                            data-bs-target="#editModal" th:attrappend="data-bs-target=${flight.id}">
                                             <img th:src="@{/img/edit-icon.png}"/>
                                         </a>
@@ -157,13 +167,14 @@
                                            onclick="return confirm('You're about to `drop down` a flight. Are you sure you wanna do that?')"
                                            title="Delete"><img th:src="@{/img/delete-sign.png}"/></a>
                                     </div>
-                                    <div class="modal" id="editModal" th:attrappend="id=${flight.id}" role="dialog" tabindex="0"
+                                    <div class="modal" id="editModal" th:attrappend="id=${flight.id}" role="dialog"
+                                         tabindex="0"
                                          data-bs-backdrop="static">
                                         <div class="modal-dialog">
                                             <div class="modal-content">
                                                 <div id="mymodal-body" class="modal-body">
                                                     <div>
-                                                        <p>Add flight information</p>
+                                                        <p>Edit flight information</p>
                                                     </div>
                                                     <hr>
                                                     <form action="#" method="POST" th:object="${flight}">
@@ -172,51 +183,48 @@
                                                             <div class=" form-group">
                                                                 <label>Airline :</label>
                                                                 <select name="airline" id="select-airline">
-                                                                    <option th:text="@{flight.airline.airlineName}" selected></option>
+                                                                    <option th:text="${flight.airline.airlineName}"
+                                                                            selected></option>
                                                                     <option value="">hida hida</option>
                                                                 </select>
                                                             </div>
                                                             <div class=" form-group">
                                                                 <label>Departure Airport :</label>
                                                                 <select name="departure-airport" id="select-airport">
-                                                                    <option th:text="flight.departureAirport.airportName" selected></option>
+                                                                    <option th:text="${flight.departureAirport.airportName}"
+                                                                            selected></option>
                                                                     <option value="">bla bla</option>
                                                                 </select>
                                                             </div>
                                                             <div class=" form-group">
                                                                 <label>Arrival Airport :</label>
                                                                 <select name="arrival-airport" id="select-airport">
-                                                                    <option th:text="@{flight.arrivalAirport.airportName}" selected></option>
+                                                                    <option th:text="${flight.arrivalAirport.airportName}"
+                                                                            selected></option>
                                                                     <option value="">hida hida</option>
                                                                 </select>
                                                             </div>
                                                             <div class="form-group">
                                                                 <label>Departure - date/time</label>
                                                                 <div class="form-group form-control inline bg-transparent">
-                                                                    <input id="date-form-width" type="date"
+                                                                    <input id="date-form-width" type="text"
                                                                            name="departure-date"
-                                                                           value="@{#dates.format(flight.departureDate, 'dd.MM.yyyy')}}">
-                                                                    <input id="date-form-width" type="time"
-                                                                           value="@{#dates.format(flight.departureDate, 'HH:mm')}}"
-                                                                           name="departure-time">
+                                                                           th:value="${flight.departureDate}">
                                                                 </div>
                                                             </div>
                                                             <div class="form-group">
                                                                 <label>Arrival - date/time</label>
                                                                 <div class="form-group form-control inline bg-transparent">
-                                                                    <input id="date-form-width" type="date"
+                                                                    <input id="date-form-width" type="text"
                                                                            name="arrival-date"
-                                                                           value="@{#dates.format(flight.arrivalDate, 'dd.MM.yyyy')}}">
-                                                                    <input id="date-form-width" type="time"
-                                                                           value="@{#dates.format(flight.arrivalDate, 'HH:mm')}}"
-                                                                           name="arrival-time">
+                                                                           th:value="${flight.arrivalDate}">
                                                                 </div>
                                                             </div>
                                                             <div class="form-group">
                                                                 <label>Flight number</label>
                                                                 <input type="text" class="form-control"
                                                                        name="flight-number"
-                                                                       th:value="@{flight.flightNumber}">
+                                                                       th:value="${flight.flightNumber}">
                                                             </div>
                                                             <hr>
                                                             <div class="form-group">
@@ -227,7 +235,9 @@
                                                                         data-bs-dismiss="modal">Close
                                                                 </button>
                                                             </div>
+                                                        </div>
                                                     </form>
+
                                                 </div>
                                             </div>
                                         </div>
