--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -46,7 +46,7 @@
                             </a>
                         </li>
                         <li>&nbsp;<->&nbsp;</li>
-                        <li th:if sec:authorize="hasRole('ADMIN')" id="dashboard_header">
+                        <li sec:authorize="hasRole('ADMIN')" id="dashboard_header">
                             <p class="nav-link text-white">Hello Boss&nbsp;</p>
                         <li sec:authorize="hasRole('ADMIN')">
                             <a th:href="@{/dashboard}" class="btn btn-outline-danger me-2">
