--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -71,7 +71,8 @@ body {
 #airline_list_index,
 #jumbo_index, #dashboard-table,
 #go_to_home_login,
-#signin_label
+#signin_label,
+#search_label
 {
     color: white;
 }
