--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -154,7 +154,7 @@
                                            class="btn btn-outline-danger btn-xs"
                                            style="padding: 5px; margin: 2px"
 
-                                           onclick="return confirm('You're about to `drop down` a flight. Are you sure you wanna do that?')"
+                                           onclick="return confirm('You are about to `drop down` a flight. Are you sure you wanna do that?')"
                                            title="Delete"><img th:src="@{/img/delete-sign.png}"/></a>
                                     </div>
                                     <div class="modal" id="editModal" th:attrappend="id=${flight.id}" role="dialog" tabindex="0"
