--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -144,10 +144,9 @@
                                 <td th:text="${#dates.format(flight.arrivalDate, 'dd.MM.yyyy HH:mm')}"> ***</td>
                                 <td>
                                     <div class="d-flex justify-content-left">
-                                        <a th:href="@{/edit/{id}(id=${flight.id})}"
+                                        <a th:href="@{/editFlight/{id}(id=${flight.id})}"
                                            class="btn btn-outline-light btn-xs"
-                                           style="padding: 5px; margin: 2px" title="Edit" data-bs-toggle="modal"
-                                           data-bs-target="#editModal" th:attrappend="data-bs-target=${flight.id}">
+                                           style="padding: 5px; margin: 2px" title="Edit">
                                             <img th:src="@{/img/edit-icon.png}"/>
                                         </a>
                                         <a th:href="@{/delete/{id}(id=${flight.id})}"
@@ -158,93 +157,7 @@
                                             <img th:src="@{/img/delete-sign.png}"/>
                                         </a>
                                     </div>
-                                    <div class="modal" id="editModal" th:attrappend="id=${flight.id}" role="dialog"
-                                         tabindex="0"
-                                         data-bs-backdrop="static">
-                                        <div class="modal-dialog">
-                                            <div class="modal-content">
-                                                <div id="mymodal-body" class="modal-body">
-                                                    <div>
-                                                        <p>Edit flight information</p>
-                                                    </div>
-                                                    <hr>
-                                                    <form action="@{/edit/{id}(id=${flight.id})}" method="post"
-                                                          th:object="${flight}">
-                                                        <input type="hidden" name="id" th:value="${flight.id}">
-                                                        <div class="form-group">
-                                                            <div class=" form-group">
-                                                                <label>Airline :</label><br>
-                                                                <label th:text="${flight.airline.airlineName} + ' (' + ${flight.airline.airlineCode} + ')' + ' - ' + ${flight.airline.airlineCountry}"></label>
-                                                                <select name="airline" id="select-airline">
-                                                                    <option selected>Select new airline</option>
-                                                                    <option th:each="editAirline : ${editAirlines}"
-                                                                            value="${editAirline.id}"
-                                                                            th:text="${editAirline.airlineName} + ' (' + ${editAirline.airlineCode} + ')' + ' - ' + ${editAirline.airlineCountry}">
-                                                                        Option
-                                                                    </option>
-                                                                </select>
-                                                            </div>
-                                                            <div class=" form-group">
-                                                                <label>Departure Airport :</label>
-                                                                <select name="departure-airport" id="select-airport">
-                                                                    <option th:text="${flight.departureAirport.airportName}"
-                                                                    ></option>
-                                                                    <option th:each="departureAirport : ${departureAirports}"
-                                                                            value="${departureAirport.id}"
-                                                                            th:text="${departureAirport.airportName} + ' (' + ${departureAirport.airportCode} + ')' + ' - ' + ${departureAirport.airportCountry}">
-                                                                        Option
-                                                                    </option>
-                                                                </select>
-                                                            </div>
-                                                            <div class=" form-group">
-                                                                <label>Arrival Airport :</label>
-                                                                <select name="arrival-airport" id="select-airport">
-                                                                    <option th:text="${flight.arrivalAirport.airportName}"
-                                                                    ></option>
-                                                                    <option th:each="arrivalAirport : ${arrivalAirports}"
-                                                                            value="${arrivalAirport.id}"
-                                                                            th:text="${arrivalAirport.airportName} + ' (' + ${arrivalAirport.airportCode} + ')' + ' - ' + ${arrivalAirport.airportCountry}">
-                                                                        Option
-                                                                    </option>
-                                                                </select>
-                                                            </div>
-                                                            <div class="form-group">
-                                                                <label>Departure - date/time</label>
-                                                                <div class="form-group form-control inline bg-transparent">
-                                                                    <input id="date-form-width" type="text"
-                                                                           name="departure-date"
-                                                                           th:value="${flight.departureDate}">
-                                                                </div>
-                                                            </div>
-                                                            <div class="form-group">
-                                                                <label>Arrival - date/time</label>
-                                                                <div class="form-group form-control inline bg-transparent">
-                                                                    <input id="date-form-width" type="text"
-                                                                           name="arrival-date"
-                                                                           th:value="${flight.arrivalDate}">
-                                                                </div>
-                                                            </div>
-                                                            <div class="form-group">
-                                                                <label>Flight number</label>
-                                                                <input type="text" class="form-control"
-                                                                       name="flight-number"
-                                                                       th:value="${flight.flightNumber}">
-                                                            </div>
-                                                            <hr>
-                                                            <div class="form-group">
-                                                                <button class="btn btn-outline-light" type="sbumit">Save
-                                                                    flight
-                                                                </button>
-                                                                <button type="button" class="btn btn-outline-danger"
-                                                                        data-bs-dismiss="modal">Close
-                                                                </button>
-                                                            </div>
-                                                        </div>
-                                                    </form>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+
                                 </td>
                             </tr>
                         </table>
